--- a/Contacts.html
+++ b/Contacts.html
@@ -5,7 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><title>
-	Zephyr html > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
+	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
 </title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
@@ -143,7 +143,7 @@ Consultas no fim de semana ou fora do horário laboral, é só combinar.
                             <li><a class="btn1" href="Contacts.html">
                                 <span id="Label6">Marcações</span></a></li>
                         </ul>
-                        <p class="navbar-right h">Zephyr html</p>
+                        <p class="navbar-right h">Zephyr Awakening</p>
                     </div>
 
                     <!-- /.navbar-collapse -->
