--- a/What_is_tarot.html
+++ b/What_is_tarot.html
@@ -5,8 +5,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><title>
-	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaix„o - Vida 
-</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr html, zephyr, mapa de emoÁıes, guia em tarot, suporte energÈtico, amor e compaix„o, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviÁos de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÁos de tarot" />
+	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaix√£o - Vida 
+</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, Zephyr Awakening, zephyr, mapa de emo√ß√µes, guia em tarot, suporte energ√©tico, amor e compaix√£o, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, servi√ßos de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, servi√ßos de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -77,27 +77,27 @@
     <div class="contentwrapper">
         <div class="insidewrapper">
             <div id="left" class="contentleft">
-                <img class="animated" src="images/zephyr-awakening-tarot-what-is-tarot.jpg" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÁos de tarot" style="width:100%;" />
+                <img class="animated" src="images/zephyr-awakening-tarot-what-is-tarot.jpg" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, servi√ßos de tarot" style="width:100%;" />
             </div>
             <div id="ContentPlaceHolder1_right" class="contentright">
                 <h1>
                 
-                    <span id="ContentPlaceHolder1_lbl_title">O que È?</span>
+                    <span id="ContentPlaceHolder1_lbl_title">O que √©?</span>
                 </h1><div class="line"></div>
                 <p>
-                    <span id="ContentPlaceHolder1_lbl_1stParagraph" class="text-normal-1">O tarot foi primeiramente conhecido por "triofi" e mais tarde por "tarocchi", È um conjunto de 78 cartas usado extensivamente em meados do sÈculo 15 em v·rias partes da Europa como um jogo, mas apenas a partir dos finais do sÈculo 18 È que sua utilizaÁ„o foi feita por mÌsticos e ocultistas. Estes faziam uso de forma a mapear os estados mentais e espirituais para que se pudesse fazer divinaÁ„o.</span>
+                    <span id="ContentPlaceHolder1_lbl_1stParagraph" class="text-normal-1">O tarot foi primeiramente conhecido por "triofi" e mais tarde por "tarocchi", √© um conjunto de 78 cartas usado extensivamente em meados do s√©culo 15 em v√°rias partes da Europa como um jogo, mas apenas a partir dos finais do s√©culo 18 √© que sua utiliza√ß√£o foi feita por m√≠sticos e ocultistas. Estes faziam uso de forma a mapear os estados mentais e espirituais para que se pudesse fazer divina√ß√£o.</span>
                 </p>
                 <p>
-                    <span id="ContentPlaceHolder1_lbl_2ndParagraph" class="text-normal-2">Desconfia-se que as cartas entraram na Europa nos finais do sÈculo 14, provavelmente por Mamluk no Egipto. As primeiras cartas de Tarot que foram documentadas foram criadas entre 1430 e 1450 em Mil„o, Ferrara e Bologna no norte da It·lia.</span>
+                    <span id="ContentPlaceHolder1_lbl_2ndParagraph" class="text-normal-2">Desconfia-se que as cartas entraram na Europa nos finais do s√©culo 14, provavelmente por Mamluk no Egipto. As primeiras cartas de Tarot que foram documentadas foram criadas entre 1430 e 1450 em Mil√£o, Ferrara e Bologna no norte da It√°lia.</span>
                 </p>
                 <p>
-                    <span id="ContentPlaceHolder1_lbl_3rdParagraph" class="text-normal-3">Mas as origens do Tarot s„o um pouco controversas, pois h· quem defenda que ela seja uma tradiÁ„o milenar trazida pelos povos mais antigos da Terra, como os antlantes e lemurianos.</span>
+                    <span id="ContentPlaceHolder1_lbl_3rdParagraph" class="text-normal-3">Mas as origens do Tarot s√£o um pouco controversas, pois h√° quem defenda que ela seja uma tradi√ß√£o milenar trazida pelos povos mais antigos da Terra, como os antlantes e lemurianos.</span>
                 </p>
                 <p>
-                    <span id="ContentPlaceHolder1_lbl_4thParagraph" class="text-normal-4">No Livro de Thoth, escrito por Aleister Crowley (um famoso ocultista) s„o referidas v·rios ocultistas que pesquisaram o significado do Tarot. Em meados do sÈculo XIX v·rios grandes Cabalistas e estudiosos. Um deles, Alphonse Constant atribuiu significados profundos ao Tarot na ¡rvore da Vida, que È a base de toda a Cabala.</span>
+                    <span id="ContentPlaceHolder1_lbl_4thParagraph" class="text-normal-4">No Livro de Thoth, escrito por Aleister Crowley (um famoso ocultista) s√£o referidas v√°rios ocultistas que pesquisaram o significado do Tarot. Em meados do s√©culo XIX v√°rios grandes Cabalistas e estudiosos. Um deles, Alphonse Constant atribuiu significados profundos ao Tarot na √Årvore da Vida, que √© a base de toda a Cabala.</span>
                 </p>
                 <p>
-                    <span id="ContentPlaceHolder1_lbl_5thParagraph" class="text-normal-5">O Tarot apresenta quatro naipes, os arcanos menores, mais 22 trunfos, os arcanos maiores. Cada uma das cartas tÍm o seu significado. AtravÈs de cada carta existe um mundo inteiro, uma energia particular que mapeia uma pessoa, desde a sua parte mais material, ‡ parte mais associada ‡ alma e ao espÌrito. Todas as nossas camadas tÍm os seus desafios e o Tarot espelha alguns deles.</span>
+                    <span id="ContentPlaceHolder1_lbl_5thParagraph" class="text-normal-5">O Tarot apresenta quatro naipes, os arcanos menores, mais 22 trunfos, os arcanos maiores. Cada uma das cartas t√™m o seu significado. Atrav√©s de cada carta existe um mundo inteiro, uma energia particular que mapeia uma pessoa, desde a sua parte mais material, √† parte mais associada √† alma e ao esp√≠rito. Todas as nossas camadas t√™m os seus desafios e o Tarot espelha alguns deles.</span>
                 </p>
                 <p>
                 </p>
@@ -123,7 +123,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="Home.html">
-                            <img src="images/zephyr-awakening-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÁos de tarot" />
+                            <img src="images/zephyr-awakening-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, servi√ßos de tarot" />
                         </a>
                     </div>
 
@@ -139,13 +139,13 @@
                             <!--<li><a class="btn1" href="Who_is_it_for.html">
                                 <span id="Label3">Abordagem</span></a></li>-->
                             <li><a class="btn1" href="Therapies.html">
-                                <span id="Label4">ServiÁos</span></a></li>
+                                <span id="Label4">Servi√ßos</span></a></li>
                             <li><a class="btn1" href="Zephyr.html">
                                 <span id="Label5">Zephyr</span></a></li>
                             <li><a class="btn1" href="Contacts.html">
-                                <span id="Label6">MarcaÁıes</span></a></li>
+                                <span id="Label6">Marca√ß√µes</span></a></li>
                         </ul>
-                        <p class="navbar-right h">Zephyr html</p>
+                        <p class="navbar-right h">Zephyr Awakening</p>
                     </div>
 
                     <!-- /.navbar-collapse -->
