--- a/Zephyr.html
+++ b/Zephyr.html
@@ -1,12 +1,13 @@
 
 
 
-<!DOCTYPE html><meta charset="utf-8">
+<!DOCTYPE html>
+<meta charset="utf-8">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><title>
-	Zephyr html > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
-</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e CompaixÃ£o - Vida 
+</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoÃ§Ãµes, guia em tarot, suporte energÃ©tico, amor e compaixÃ£o, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -77,28 +78,28 @@
     <div class="contentwrapper">
         <div class="insidewrapper">
         <div id="left" class="contentleft">
-            <img class="animated" src="images/zephyr-awakening-transcendental-tarot-zephyr.png" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" style="width:100%;" />
+            <img class="animated" src="images/zephyr-awakening-transcendental-tarot-zephyr.png" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" style="width:100%;" />
         </div>
         <div id="ContentPlaceHolder1_right" class="contentright">
             <h1>
                 <span id="ContentPlaceHolder1_lbl_title">Zephyr</span>
             </h1><div class="line"></div>
             <p>
-                <span id="ContentPlaceHolder1_lbl_1stParagraph" class="text-normal-1">Sou um jovem ligado à espiritualidade desde criança e desde lá faço o meu percurso.</span>
+                <span id="ContentPlaceHolder1_lbl_1stParagraph" class="text-normal-1">Sou um jovem ligado Ã  espiritualidade desde crianÃ§a e desde lÃ¡ faÃ§o o meu percurso.</span>
             </p>
             <p>
-                <span id="ContentPlaceHolder1_lbl_2ndParagraph" class="text-normal-2">Sempre estive ligado às pessoas, ajudando-as. Em termos de terapias comecei com o Reiki tradicional, onde comecei a fazer a ligação com as energias que sentia com o que a intuição me dizia.</span>
+                <span id="ContentPlaceHolder1_lbl_2ndParagraph" class="text-normal-2">Sempre estive ligado Ã s pessoas, ajudando-as. Em termos de terapias comecei com o Reiki tradicional, onde comecei a fazer a ligaÃ§Ã£o com as energias que sentia com o que a intuiÃ§Ã£o me dizia.</span>
             </p>
             <p>
-                <span id="ContentPlaceHolder1_lbl_3rdParagraph" class="text-normal-3">Passei por diversas viagens espirituais e humanas, em que aprendi lições valiosas sobre a compaixão e o que realmente significa.</span>
+                <span id="ContentPlaceHolder1_lbl_3rdParagraph" class="text-normal-3">Passei por diversas viagens espirituais e humanas, em que aprendi liÃ§Ãµes valiosas sobre a compaixÃ£o e o que realmente significa.</span>
             </p>
             <p>
-                <span id="ContentPlaceHolder1_lbl_4thParagraph" class="text-normal-4">Tenho experiência de 5 anos a realizar constelações familiares o que me deu uma bagagem bastante grande em conectar-me com o outro e sentir o que o próximo sente, com um sentimento de respeito profundo. Estas ligações permitem sentimentos e energias emergirem permitindo a sua evacuação, transformação ou expressão.
-Também me liguei ao tantra permitindo sentir as sensações de uma forma mais corporal, e uma abertura aos sentidos que me refinou em grande escala a minha ligação com o próximo.
+                <span id="ContentPlaceHolder1_lbl_4thParagraph" class="text-normal-4">Tenho experiÃªncia de 5 anos a realizar constelaÃ§Ãµes familiares o que me deu uma bagagem bastante grande em conectar-me com o outro e sentir o que o prÃ³ximo sente, com um sentimento de respeito profundo. Estas ligaÃ§Ãµes permitem sentimentos e energias emergirem permitindo a sua evacuaÃ§Ã£o, transformaÃ§Ã£o ou expressÃ£o.
+TambÃ©m me liguei ao tantra permitindo sentir as sensaÃ§Ãµes de uma forma mais corporal, e uma abertura aos sentidos que me refinou em grande escala a minha ligaÃ§Ã£o com o prÃ³ximo.
 </span>
             </p>
             <p>
-                <span id="ContentPlaceHolder1_lbl_5thParagraph" class="text-normal-5">O meu curso de Tarot durou dois anos, onde que aprendi a sentir as cartas como se de um mapa se tratasse. Em que cada local representa algo da vida e as estradas representam comunicações internas ou externas entre todos os pontos.
+                <span id="ContentPlaceHolder1_lbl_5thParagraph" class="text-normal-5">O meu curso de Tarot durou dois anos, onde que aprendi a sentir as cartas como se de um mapa se tratasse. Em que cada local representa algo da vida e as estradas representam comunicaÃ§Ãµes internas ou externas entre todos os pontos.
 </span>
             </p>
             <p>
@@ -125,7 +126,7 @@ Também me liguei ao tantra permitindo sentir as sensações de uma forma mais corp
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="Home.html">
-                            <img src="images/zephyr-awakening-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+                            <img src="images/zephyr-awakening-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" />
                         </a>
                     </div>
 
@@ -141,13 +142,13 @@ Também me liguei ao tantra permitindo sentir as sensações de uma forma mais corp
                             <!--<li><a class="btn1" href="Who_is_it_for.html">
                                 <span id="Label3">Abordagem</span></a></li>-->
                             <li><a class="btn1" href="Therapies.html">
-                                <span id="Label4">Serviços</span></a></li>
+                                <span id="Label4">ServiÃ§os</span></a></li>
                             <li><a class="btn1" href="Zephyr.html">
                                 <span id="Label5">Zephyr</span></a></li>
                             <li><a class="btn1" href="Contacts.html">
-                                <span id="Label6">Marcações</span></a></li>
+                                <span id="Label6">MarcaÃ§Ãµes</span></a></li>
                         </ul>
-                        <p class="navbar-right h">Zephyr html</p>
+                        <p class="navbar-right h">Zephyr Awakening</p>
                     </div>
 
                     <!-- /.navbar-collapse -->
