--- a/Contacts.html
+++ b/Contacts.html
@@ -1,12 +1,14 @@
 
 
 
-<!DOCTYPE html><meta charset="utf-8">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>
-	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
-</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+<head>
+<meta charset="utf-8"/>
+<title>
+	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e CompaixÃ£o - Vida 
+</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoÃ§Ãµes, guia em tarot, suporte energÃ©tico, amor e compaixÃ£o, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -76,7 +78,7 @@
             
     <div class="contentwrapper">
         
-            <img class="animated" src="images/zephyr-awakening-transcendental-tarot-appointments.gif" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" style="width:100%; margin:0px 0% 0px 0%" />
+            <img class="animated" src="images/zephyr-awakening-transcendental-tarot-appointments.gif" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" style="width:100%; margin:0px 0% 0px 0%" />
        <br />
         <div class="insidewrapper" style="margin-bottom:100px;margin-left:20%">
             <div class="text-normal-1">
@@ -96,10 +98,10 @@
                        <a href="skype:healing.zephyr?call"> healing.zephyr</a><br />
             </div>
             <div class="text-normal-4">
-            Faço consultas na Costa da Caparica, mas também por skype!<br />
+            FaÃ§o consultas na Costa da Caparica, mas tambÃ©m por skype!<br />
  
  
-Consultas no fim de semana ou fora do horário laboral, é só combinar.
+Consultas no fim de semana ou fora do horÃ¡rio laboral, Ã© sÃ³ combinar.
                 </div>
         </div>
         </div>
@@ -121,7 +123,7 @@ Consultas no fim de semana ou fora do horário laboral, é só combinar.
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="Home.html">
-                            <img src="images/zephyr-html-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+                            <img src="images/zephyr-html-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviÃ§os de tarot" />
                         </a>
                     </div>
 
@@ -137,11 +139,11 @@ Consultas no fim de semana ou fora do horário laboral, é só combinar.
                             <!--<li><a class="btn1" href="Who_is_it_for.html">
                                 <span id="Label3">Abordagem</span></a></li>-->
                             <li><a class="btn1" href="Therapies.html">
-                                <span id="Label4">Serviços</span></a></li>
+                                <span id="Label4">ServiÃ§os</span></a></li>
                             <li><a class="btn1" href="Zephyr.html">
                                 <span id="Label5">Zephyr</span></a></li>
                             <li><a class="btn1" href="Contacts.html">
-                                <span id="Label6">Marcações</span></a></li>
+                                <span id="Label6">MarcaÃ§Ãµes</span></a></li>
                         </ul>
                         <p class="navbar-right h">Zephyr Awakening</p>
                     </div>
