--- a/Therapies.html
+++ b/Therapies.html
@@ -2,10 +2,12 @@
 
 
 <!DOCTYPE html>
-<meta charset="utf-8">
+
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>
+<head>
+<meta charset="utf-8">
+<title>
 	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
 </title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
